fix dates not showing right causing issues with post uploads

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -275,17 +275,6 @@ main{
     cursor: pointer;
 }
 
-.flexBox{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    width: 100%;
-
-}
-
-
-
 
 
 /*New page Styling*/
